src/test/ui/error-codes/E0434.stderr
error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/E0434.rs:14:9
   |
LL |         y //~ ERROR E0434
   |         ^
   |
   = help: use the `|| { ... }` closure form instead

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0434"
